# CI-Preview

./: .gitignore  Cargo.toml  Dockerfile  config.yml  example.config.yml  example.env
.github/workflows/: build.yml  docker.yml
src/: app.rs  bot.rs  error.rs  main.rs
src/config/: app_config.rs  repo_config.rs
src/github/: mod.rs  payload_verification.rs  verification.rs  web.rs
src/github/octocrab/models/: mod.rs  workflows_extension.rs
src/util/: time.rs
