[package]
name = "preview-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
axum = "0.8.4"
chrono = "0.4.41"
#axum-macros = "0.5.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac-sha256 = "1.1.12"
moka = { version = "0.12.10", features = ["future"] }
notify = "8.0.0"
octocrab = "0.44.1"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_norway = "0.9.42"
serenity = "0.12"
snafu = "0.8.6"
subtle = "2.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
